[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Echo"
version = "1.0.0"
description = "Admin echo package for BallsDex v3. Make the bot talk and speak with a lot of custom features :3"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Glitch" }]
readme = "README.md"
dependencies = []

[project.urls]
Repository = "https://github.com/GlitchedGlitch/Ultimate-Ballsdex-Library-Extensions"
Package = "https://github.com/GlitchedGlitch/BallsDex-Echo-Package/tree/main"

[tool.setuptools.packages.find]
where = ["."]
include = ["echo*"] 
